PaymentModal | Fixed Safari issue on mobile

--- a/src/Pages/Checkout/style.css
+++ b/src/Pages/Checkout/style.css
@@ -334,6 +334,7 @@
   }
   .paymentModal {
     top: 0;
+    height: 100%;
   }
   .cartDiscount {
     max-width: none;
